fix resources: align external icon to bottom-right and SVG attribute

--- a/hlx_statics/blocks/resources/resources.css
+++ b/hlx_statics/blocks/resources/resources.css
@@ -1,5 +1,6 @@
-main div.resources-wrapper a{
+main div.resources-wrapper li > a{
     font-size: 16px;
+    flex: 1;
 }
 
 main div.resources-wrapper ul{
@@ -9,6 +10,7 @@ main div.resources-wrapper ul{
 main div.resources-wrapper li{
     margin-top:15px;
     display:flex;
+    align-items: flex-end;
 }
 
 main div.resources-wrapper h3{
@@ -27,6 +29,5 @@ main div.resources-wrapper div.external-icon {
     width: 16px;
     height: 16px;
     margin-left: 8px;
-    margin-top:3px;
     vertical-align: middle;
 }
